# ya_asteroids

./: .gitignore  CMakeLists.txt  README.md
src/: start_game.cpp
src/bullets/: bullet.cpp  bullet.h  bullet_helpers.cpp  bullet_helpers.h
src/debug_info/: frames_debug.cpp  frames_debug.h  graphics_debug.cpp  graphics_debug.h  objects_debug.cpp  objects_debug.h
src/images/: texture_shelf.cpp  texture_shelf.h
src/init/: constants.h  sdl2_helpers.cpp  sdl2_helpers.h
src/scenes/: destroy_asteroids_scene.cpp  destroy_asteroids_scene.h
src/shared/: game_objects_helpers.cpp  game_objects_helpers.h  gfx_helpers.cpp  gfx_helpers.h  obj_meta.h  obj_motion.h  physics_helpers.cpp  physics_helpers.h
src/spaceship/: spaceship_a.cpp  spaceship_a.h  spaceship_b.cpp  spaceship_b.h
src/text/: render_text.cpp  render_text.h
